--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cccc-sdk"
-version = "0.4.0rc1"
+version = "0.4.0"
 description = "Client SDK for the CCCC daemon (IPC v1)"
 readme = "README.md"
 requires-python = ">=3.9"
