--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cccc-sdk",
-  "version": "0.4.0-rc.1",
+  "version": "0.4.0",
   "description": "Client SDK for the CCCC daemon (IPC v1)",
   "type": "module",
   "main": "./dist/index.js",
